--- a/views/budget_view.xml
+++ b/views/budget_view.xml
@@ -3,8 +3,8 @@
 
         <!-- Budget Management Tree View -->
         <record id="view_budget_management_tree" model="ir.ui.view">
-            <field name="name">budget.management.tree</field>
-            <field name="model">budget.management</field>
+            <field name="name">construction.budget.tree</field>
+            <field name="model">construction.budget</field>
             <field name="arch" type="xml">
                 <tree>
                     <field name="name"></field>
@@ -19,8 +19,8 @@
 
         <!-- Budget Management Form View -->
         <record id="view_budget_management_form" model="ir.ui.view">
-            <field name="name">budget.management.form</field>
-            <field name="model">budget.management</field>
+            <field name="name">construction.budget.form</field>
+            <field name="model">construction.budget</field>
             <field name="arch" type="xml">
                 <form>
                     <sheet>
@@ -39,7 +39,7 @@
         <!-- Action to Open the Budget Management List View -->
         <record id="action_budget_management" model="ir.actions.act_window">
             <field name="name">Budget Management</field>
-            <field name="res_model">budget.management</field>
+            <field name="res_model">construction.budget</field>
             <field name="view_mode">tree,form</field>
             <field name="view_id" ref="view_budget_management_tree"/>
         </record>
