--- a/views/project_view.xml
+++ b/views/project_view.xml
@@ -2,8 +2,8 @@
     <data>
         <!-- Project Management Tree View -->
         <record id="view_project_management_tree" model="ir.ui.view">
-            <field name="name">project.management.tree</field>
-            <field name="model">project.management</field>
+            <field name="name">construction.project.tree</field>
+            <field name="model">construction.project</field>
             <field name="arch" type="xml">
                 <tree>
                     <field name="name"/>
@@ -18,8 +18,8 @@
 
         <!-- Project Management Form View -->
         <record id="view_project_management_form" model="ir.ui.view">
-            <field name="name">project.management.form</field>
-            <field name="model">project.management</field>
+            <field name="name">construction.project.form</field>
+            <field name="model">construction.project</field>
             <field name="arch" type="xml">
                 <form>
                     <sheet>
@@ -69,7 +69,7 @@
         <!-- Action to Open the Project Management List View -->
         <record id="action_project_management" model="ir.actions.act_window">
             <field name="name">Project Management</field>
-            <field name="res_model">project.management</field>
+            <field name="res_model">construction.project</field>
             <field name="view_mode">tree,form</field>
             <field name="view_id" ref="view_project_management_tree"/>
         </record>
