--- a/views/task_view.xml
+++ b/views/task_view.xml
@@ -49,7 +49,7 @@
         </record>
 
         <!-- Menu for Project Task -->
-        <menuitem id="menu_project_task_list" name="Task List" parent="menu_project_management_root" action="action_project_task"/>
+        <menuitem id="menu_project_task_list" name="Task" parent="menu_project_management_root" action="action_project_task"/>
 
     </data>
 </odoo>
