--- a/views/materials_view.xml
+++ b/views/materials_view.xml
@@ -6,9 +6,12 @@
         <field name="model">construction.material</field>
         <field name="arch" type="xml">
             <tree>
+                <field name="ref"/>
                 <field name="name"/>
+                <field name="supplier_id"/>
                 <field name="available_stock"/>
                 <field name="average_price"/>
+                <field name="image" widget='image' options="{'size': (150, 150)}"/>
             </tree>
         </field>
     </record>
@@ -21,9 +24,15 @@
             <form>
                 <sheet>
                     <group>
-                        <field name="name"/>
-                        <field name="available_stock"/>
-                        <field name="average_price" readonly="1"/>
+                        <group>
+                            <field name="name"/>
+                            <field name="supplier_id"/>
+                            <field name="available_stock"/>
+                            <field name="average_price" readonly="1"/>
+                        </group>
+                        <group>
+                            <field name="image" widget='image'/>
+                        </group>
                     </group>
                     <group>
                         <field name="purchase_ids" widget="one2many_list">
