--- a/views/progresnote_view.xml
+++ b/views/progresnote_view.xml
@@ -7,6 +7,7 @@
             <field name="model">construction.progress</field>
             <field name="arch" type="xml">
                 <tree>
+                    <field name="ref"/>
                     <field name="name"/>
                     <field name="id_proyek"/>
                     <field name="catatan_kemajuan"/>
