--- a/views/project_view.xml
+++ b/views/project_view.xml
@@ -6,6 +6,7 @@
             <field name="model">construction.project</field>
             <field name="arch" type="xml">
                 <tree>
+                    <field name="ref"/>
                     <field name="name"/>
                     <field name="client"/>
                     <field name="tanggal_mulai"/>
@@ -80,6 +81,24 @@
                                     <div class="oe_title">
                                         <h1>
                                             <field name="total_budget" readonly="1" options="{'widget': 'handle'}"/>
+                                        </h1>
+                                    </div>
+                                </group>
+                            </page>
+                            <page string="Expenditure List">
+                                <field name="expenditure_ids" widget="one2many_list" options="{'editable': true}">
+                                    <tree editable="bottom">
+                                        <field name="name"/>
+                                        <field name="deskripsi_pengeluaran"/>
+                                        <field name="jumlah_pengeluaran"/>
+                                        <field name="tanggal_pengeluaran"/>
+                                        <button name="get_formview_action" type="object" icon="fa-eye"/>
+                                    </tree>
+                                </field>
+                                <group>
+                                    <div class="oe_title">
+                                        <h1>
+                                            <field name="total_expenditure" readonly="1" options="{'widget': 'handle'}"/>
                                         </h1>
                                     </div>
                                 </group>
