--- a/views/menu_item.xml
+++ b/views/menu_item.xml
@@ -9,4 +9,6 @@
 
     <menuitem id="menu_evaluations_root" name="Evaluations" parent="menu_construction"/>
 
+    <menuitem id="menu_permit_root" name="Permit" parent="menu_construction"/>
+
 </odoo>
