--- a/views/purchase_view.xml
+++ b/views/purchase_view.xml
@@ -32,7 +32,7 @@
                     <field name="price"/>
                     <field name="total"/>
                     <field name="purchase_date"/>
-                    <field name="create_uid"></field>
+                    <field name="create_uid"/>
                 </tree>
             </field>
         </record>
