--- a/views/changeinplanning_view.xml
+++ b/views/changeinplanning_view.xml
@@ -7,6 +7,7 @@
         <field name="arch" type="xml">
             <tree>
                 <field name="ref"/>
+                <field name="name"/>
                 <field name="project_id"/>
                 <field name="change_description"/>
                 <field name="change_date"/>
@@ -24,6 +25,7 @@
                 <sheet>
                     <group>
                         <field name="ref"/>
+                        <field name="name"/>
                         <field name="project_id"/>
                         <field name="change_description"/>
                         <field name="change_date"/>
